# grok-build

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SOURCE_REV
crates/codegen/xai-fast-worktree/: Cargo.toml
crates/codegen/xai-fast-worktree/src/: api.rs  auto_gc.rs  discovery.rs  lib.rs
crates/codegen/xai-fast-worktree/src/db/: mod.rs
crates/codegen/xai-fast-worktree/src/git/: checkout.rs
crates/codegen/xai-grok-agent/: Cargo.toml
crates/codegen/xai-grok-agent/src/: builder.rs  config.rs
crates/codegen/xai-grok-agent/src/plugins/: git_install.rs  hooks_adapter.rs  install_registry.rs  local_refresh.rs
crates/codegen/xai-grok-agent/src/prompt/: agents_md.rs  context.rs  user_message.rs
crates/codegen/xai-grok-pager/: Cargo.toml  README.md
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-pty-harness/: Cargo.toml
crates/codegen/xai-grok-pager-pty-harness/src/: content.rs  flows.rs  lib.rs  pty.rs  scripted.rs
crates/codegen/xai-grok-pager-pty-harness/src/scenarios/: empty_enter_send_now.rs  idle_cost.rs  large_codeblock.rs  mixed_interaction.rs  plan_approval_resume.rs  resize_storm.rs  scroll_stress.rs  streaming_render.rs
crates/codegen/xai-grok-pager-pty-harness/src/scroll_matrix/: runner.rs  session.rs
crates/codegen/xai-grok-pager-pty-harness/tests/: env_op_compile.rs  privacy_banner_e2e.rs  prompt_history_durable_quit.rs  scroll_correctness_ptyctl.rs  scroll_matrix_curated.rs
crates/codegen/xai-grok-pager/docs/: custom-hooks.md
crates/codegen/xai-grok-pager/docs/tutorial/: 01-coming-from-another-tool.md  02-first-prompt.md  03-attach-and-paste.md  04-navigation.md  05-slash-commands.md  06-worktrees.md  07-plan-and-permissions.md  08-make-it-yours.md  09-where-next.md
crates/codegen/xai-grok-pager/docs/user-guide/: 01-getting-started.md  02-authentication.md  03-keyboard-shortcuts.md  04-slash-commands.md  05-configuration.md  06-theming.md  07-mcp-servers.md  08-skills.md  09-plugins.md  10-hooks.md  11-custom-models.md  12-project-rules.md  14-headless-mode.md  16-subagents.md  17-sessions.md  18-sandbox.md  19-plan-mode.md  20-background-tasks.md  21-terminal-support.md  22-permissions-and-safety.md  (+3 more)
crates/codegen/xai-grok-pager/scripts/: install.ps1  install.sh
crates/codegen/xai-grok-pager/src/: diagnostics.rs  docs.rs  headless.rs  lib.rs  mcp_cmd.rs  memory_trace.rs  plugin_cmd.rs  pty_wrap.rs  sessions_cmd.rs  startup.rs  test_util.rs  tracing.rs  tutorial_docs.rs  wrap_filter.rs  wrap_restore.rs
crates/codegen/xai-grok-pager/tests/: doctor_early_dispatch.rs  grok_home_paths.rs  pty_auto_mode.rs  pty_e2e_clipboard.rs  pty_e2e_config_ui.rs  pty_e2e_persistence.rs  pty_e2e_queue.rs  pty_e2e_scroll_selection.rs  pty_e2e_smoke.rs  pty_xtversion.rs  settings_e2e.rs
crates/codegen/xai-grok-plugin-marketplace/: Cargo.toml
crates/codegen/xai-grok-plugin-marketplace/src/: config.rs  git.rs  installer.rs  lib.rs  scanner.rs
crates/codegen/xai-grok-sampling-types/: Cargo.toml
crates/codegen/xai-grok-sampling-types/src/: conversation.rs  error.rs  lib.rs  messages.rs  serde_helpers.rs  tool_overrides.rs  types.rs
crates/codegen/xai-grok-sandbox/: Cargo.toml
crates/codegen/xai-grok-sandbox/src/: child_net.rs  hook_write_deny.rs  hook_write_deny_tests.rs  lib.rs  network_policy.rs  paths.rs  profiles.rs
crates/codegen/xai-grok-sandbox/tests/: deny_paths_e2e.rs
crates/codegen/xai-grok-shell/: CHANGELOG.md  Cargo.toml  README.md
crates/codegen/xai-grok-shell/benches/: session_list.rs
crates/codegen/xai-grok-shell/changelogs/: 0.2.102.json  0.2.102.md  0.2.103.json  0.2.103.md  0.2.104.json  0.2.104.md  0.2.105.json  0.2.105.md  0.2.106.json  0.2.106.md  0.2.107.json  0.2.107.md  0.2.108.json  0.2.108.md  0.2.109.json  0.2.109.md  0.2.110.json  0.2.110.md  0.2.111.json  0.2.111.md
crates/codegen/xai-grok-shell/src/: builtin.rs  bundle.rs  claude_import.rs  lib.rs  managed_config.rs  plugin.rs  privacy.rs
crates/codegen/xai-grok-shell/tests/: team_managed_config.rs  test_agent_type_invariant.rs  test_auth_provider_e2e.rs  test_built_binary_e2e.rs  test_debug_logging.rs  test_doom_loop_recovery.rs  test_global_extra_headers_e2e.rs  test_leader_death_repro.rs  test_leader_stdio_integration.rs  test_leader_version_skew.rs  test_mcp_permission_persistence.rs  test_refusal_stop_reason.rs  test_registry_churn.rs  test_stop_hook_e2e.rs  test_subagent_orphan_reconcile.rs  test_summary_reasoning_effort.rs  test_trusted_local_plugin_refresh_e2e.rs  test_vendor_compat.rs
crates/codegen/xai-grok-subagent-resolution/: Cargo.toml
crates/codegen/xai-grok-subagent-resolution/src/: definition.rs  lib.rs  overrides.rs  types.rs
crates/codegen/xai-grok-telemetry/: Cargo.toml
crates/codegen/xai-grok-telemetry/src/: client.rs  config.rs  events.rs  id.rs  lib.rs  sentry.rs
crates/codegen/xai-grok-test-support/: Cargo.toml  README.md
crates/codegen/xai-grok-test-support/src/: acp_client.rs  env.rs  headless.rs  inference_override.rs  leader.rs  lib.rs  mock_server.rs  process.rs  sandbox.rs  scripted.rs  sse.rs
crates/codegen/xai-grok-tools/: Cargo.toml  build.rs
crates/codegen/xai-grok-tools/schema/: tool_meta.schema.json
crates/codegen/xai-grok-tools/src/: bridge.rs  normalization.rs  persistence.rs  tool_taxonomy.rs
crates/codegen/xai-grok-tools/tests/: cgroup_memory_test.rs
crates/codegen/xai-grok-update/: Cargo.toml
crates/codegen/xai-grok-update/src/: auto_update.rs  lib.rs  version.rs  version_policy.rs
crates/codegen/xai-grok-update/tests/: test_install_sh.rs  test_subprocess.rs
crates/codegen/xai-grok-voice/: Cargo.toml
crates/codegen/xai-grok-voice/src/: auth.rs  config.rs  event.rs  lib.rs  pcm.rs  pipeline.rs  probe.rs
crates/codegen/xai-prompt-queue/: Cargo.toml
crates/codegen/xai-prompt-queue/src/: combine.rs  lib.rs  types.rs
crates/codegen/xai-workflow/: Cargo.toml
crates/codegen/xai-workflow/examples/: validate.rs
crates/codegen/xai-workflow/src/: engine.rs  host.rs  journal.rs  lib.rs  meta.rs  run.rs  validate.rs
(+890 files in other folders)
