[package]
license = "Apache-2.0"
name = "xai-grok-sampling-types"
version = "0.1.0"
edition.workspace = true
description = "Pure data types for the xAI sampling / chat-completion API layer"

[dependencies]
async-openai = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
tracing = { workspace = true }
xai-grok-compaction = { path = "../../common/xai-grok-compaction" }
xai-grok-tools = { path = "../xai-grok-tools" }

[dev-dependencies]
assert_matches = { workspace = true }

[lints]
workspace = true
