[package]
license = "Apache-2.0"
name = "xai-grok-subagent-resolution"
version = "0.1.0"
edition.workspace = true
description = "Shared subagent definition, runtime, prompt, and resume resolution"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xai-grok-agent = { path = "../xai-grok-agent" }
xai-grok-sampling-types = { path = "../xai-grok-sampling-types" }
xai-grok-tools = { path = "../xai-grok-tools" }
xai-tool-types.workspace = true

[features]
default = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
toml = { workspace = true }

[lints]
workspace = true
