[package]
license = "Apache-2.0"
name = "xai-grok-test-support"
version = "0.1.0"
edition.workspace = true
description = "Shared test-support for grok-build crates: mock inference server, SSE generators, ACP stdio client, headless runner, env sandbox"
publish = false

[dependencies]
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
url = { workspace = true }
xai-acp-lib = { workspace = true }
xai-tty-utils = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
[features]
default = []
default-bazel = []

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
